// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link examples > Alternate link with trailing icon should render correctly 1`] = `
<div>
  <a
    class="v-link v-alternate v-link-no-underline"
    href="./link"
  >
    Destination label
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
      />
    </svg>
  </a>
</div>
`;

exports[`Link examples > Default link should render correctly 1`] = `
<div>
  <a
    class="v-link"
    href="./link"
  >
    Destination label
  </a>
</div>
`;

exports[`Link examples > Disabled link should render correctly 1`] = `
<div>
  <a
    aria-disabled="true"
    class="v-link"
    role="link"
  >
    Destination label
  </a>
</div>
`;

exports[`Link examples > Inline link should render correctly 1`] = `
<div>
  <p>
    This is a sentence with an inline 
    <a
      class="v-link"
      href="./link"
    >
      destination label
    </a>
    .
  </p>
</div>
`;

exports[`Link examples > Inline link with trailing icon should render correctly 1`] = `
<div>
  <p>
    This is a sentence with an inline
     
    <a
      aria-label="destination label (opens in a new tab)"
      class="v-link v-link-no-underline"
      href="./link"
    >
      destination label
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-maximize"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M16 0V6H14V3.46484L7.45703 10L6 8.54297L12.5391 2H10V0H16Z"
        />
        <path
          class="v-icon-primary"
          d="M8 3H2V14H13V8H15V16H0V1H8V3Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </a>
  </p>
</div>
`;

exports[`Link examples > Link coded as a button should render correctly 1`] = `
<div>
  <button
    class="v-link v-link-no-underline"
  >
    Print
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-tiny v-icon-device-printer"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 8V16H4V8H12ZM6 14H10V10H6V14Z"
      />
      <path
        class="v-icon-primary"
        d="M14 0V4.18359H16V12.1836H14V6.18359H2V12.1836H0V4.18359H2V0H14ZM4 4H12V2H4V4Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Link examples > Link that opens in a new tab should render correctly 1`] = `
<div>
  <a
    aria-label="Destination label (opens in a new tab)"
    class="v-link v-link-no-underline"
    href="./link"
    rel="noopener noreferrer"
    target="_blank"
  >
    Destination label
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-tiny v-icon-maximize"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M16 0V6H14V3.46484L7.45703 10L6 8.54297L12.5391 2H10V0H16Z"
      />
      <path
        class="v-icon-primary"
        d="M8 3H2V14H13V8H15V16H0V1H8V3Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </a>
</div>
`;

exports[`Link examples > Link uses React Router DOM should render correctly 1`] = `
<div>
  This 
  <a
    class="v-link"
    data-discover="true"
    href="/"
  >
    link
  </a>
   goes to this current page.
</div>
`;

exports[`Link examples > Link with custom typography should render correctly 1`] = `
<div>
  <a
    class="v-link v-link-no-underline"
    href="./link"
  >
    <p
      class="v-typography-headline-3"
    >
      Destination label (headline 3) 
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
        />
      </svg>
    </p>
  </a>
</div>
`;

exports[`Link examples > Link with leading icon should render correctly 1`] = `
<div>
  <a
    class="v-link v-link-no-underline"
    href="./link"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-back"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        d="M9.21109 1.7085L3.91812 7.00146H16.0041V9.00146H3.91812L9.21109 14.2944L7.79703 15.7085L0.0899963 8.00146L7.79703 0.294434L9.21109 1.7085Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    Destination label
  </a>
</div>
`;

exports[`Link examples > Link with trailing icon should render correctly 1`] = `
<div>
  <a
    class="v-link v-link-no-underline"
    href="./link"
  >
    Destination label
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
      />
    </svg>
  </a>
</div>
`;
